# Puzzle2

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
src/: analysis.rs  io.rs  main.rs  matching.rs  models.rs
