[package]
name = "puzzle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "puzzle"
path = "src/main.rs"

[dependencies]
# Image loading and processing
image = { version = "0.25", features = ["jpeg", "png"] }
opencv = { version = "0.98", default-features = false, features = ["clang-runtime", "imgproc"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"
fern = "0.6"
chrono = "0.4"
crossterm = "0.27"

# Error handling
anyhow = "1"

# Math
nalgebra = "0.33"

[profile.release]
opt-level = 3
